--- a/class/sewise-player/html/skins/liveOrange/skin.css
+++ b/class/sewise-player/html/skins/liveOrange/skin.css
@@ -1,11 +1,11 @@
 /*
  * Skin for Sewise Player Plugin
  * http://www.sewise.com/
- * 
+ *
  * Skin Name: White
- * 
+ *
  * Copyright (c) 2010-2014 Sewise Ltd
- * 
+ *
  * Author: Jack Zhang
  * Skin Version: 1.0.0 (sewise player 1.0.0)
  * Date: 19th February 2012
@@ -24,7 +24,7 @@ div.sewise-player-ui {
 	padding: 0px;
 	overflow: hidden;
 	color: white;
-	font-size: 14px;
+	font-size: 87.5%;
 	font-family: 'Trebuchet MS' Verdana, Arial, sans-serif;
 	pointer-events: none;
 }
@@ -120,7 +120,7 @@ div.sewise-player-ui div.controlbar div.controlbar-progress div.controlbar-progr
 	top: 4px;
 	background: url("controlbar.png") 0px -270px repeat-x;
 	cursor: pointer;
-	
+
 }
 div.sewise-player-ui div.controlbar div.controlbar-progress div.controlbar-progress-playpoint {
 	position: absolute;
@@ -205,9 +205,9 @@ div.sewise-player-ui div.topbar {
 	position: absolute;
 	width: 100%;
 	float: left;
-	
+
 	background-color: rgba(0, 0, 0, 0.3);
-	
+
 	/*color: white;
 	font-size: 0.8em;*/
 }
@@ -244,7 +244,7 @@ div.sewise-player-ui div.buffer div.buffer-bg {
 	height: 55px;
 	left: 0px;
 	top: 0px;
-	
+
 	background: url("buffer.gif") 0px 0px no-repeat;
 	text-indent: -10000px;
 }
@@ -275,7 +275,7 @@ div.sewise-player-ui div.big-play-btn a.big-play-icon {
 	display:block;
 	width: 80px;
 	height: 70px;
-	
+
 	background: url("big_play_btn.png") 0px 0px no-repeat;
 	text-indent: -10000px;
 }
