--- a/class/sewise-player/html/skins/vodFoream/skin.css
+++ b/class/sewise-player/html/skins/vodFoream/skin.css
@@ -1,11 +1,11 @@
 /*
  * Skin for Sewise Player Plugin
  * http://www.sewise.com/
- * 
+ *
  * Skin Name: FlowPlayer
- * 
+ *
  * Copyright (c) 2010-2014 Sewise Ltd
- * 
+ *
  * Author: Jack Zhang
  * Skin Version: 1.0.0 (sewise player 1.0.0)
  * Date: 19th February 2014
@@ -24,7 +24,7 @@ div.sewise-player-ui {
 	padding: 0px;
 	overflow: hidden;
 	color: white;
-	font-size: 12px;
+	font-size: 75%;
 	font-family: 'Lucida Sans', "Lucida Grande", sans-serif;
 	pointer-events: none;
 }
@@ -95,10 +95,10 @@ div.sewise-player-ui div.controlbar div.controlbar-progress div.controlbar-progr
 	position: absolute;
 	top: 7px;
 	width: 100%;
-	
+
 	height: 6px;
 	background: url("controlbar.png") 0px -140px repeat-x;
-	
+
 	/*height: 4px;
 	background-color: #514f52;
 	border: 1px solid #000;*/
@@ -221,9 +221,9 @@ div.sewise-player-ui div.topbar {
 	position: absolute;
 	width: 100%;
 	float: left;
-	
+
 	background-color: rgba(0, 0, 0, 0.3);
-	
+
 	/*color: white;
 	font-size: 0.8em;*/
 }
@@ -260,7 +260,7 @@ div.sewise-player-ui div.buffer div.buffer-bg {
 	height: 18px;
 	left: 20px;
 	top: 0px;
-	
+
 	background: url("buffer.gif") 0px 0px no-repeat;
 	text-indent: -10000px;
 }
@@ -291,7 +291,7 @@ div.sewise-player-ui div.big-play-btn a.big-play-icon {
 	display:block;
 	width: 90px;
 	height: 90px;
-	
+
 	background: url("big_play_btn.png") 0px 0px no-repeat;
 	text-indent: -10000px;
 }
