--- a/class/video-js/video-js.css
+++ b/class/video-js/video-js.css
@@ -244,7 +244,7 @@
   background-color: #000;
   position: relative;
   padding: 0;
-  font-size: 10px;
+  font-size: 62.5%;
   line-height: 1;
   font-weight: normal;
   font-style: normal;
@@ -344,7 +344,7 @@ body.vjs-full-window {
   padding: 20px;
   color: #fff;
   background-color: #000;
-  font-size: 18px;
+  font-size: 112.5%;
   font-family: Arial, Helvetica, sans-serif;
   text-align: center;
   width: 300px;
@@ -1205,7 +1205,7 @@ video::-webkit-media-text-track-display {
   margin: 0 auto;
   padding: 0.5em;
   height: 16em;
-  font-size: 12px;
+  font-size: 75%;
   width: 40em; }
 
 .vjs-caption-settings .vjs-tracksettings {
