--- a/css/admin.css
+++ b/css/admin.css
@@ -152,7 +152,7 @@ fieldset p { margin-bottom: .5em;}
 /* align */
 
 /* label */
-.label{font-size: 16px; color: #2F5376; font-weight: bold;}
+.label{font-size: 100%; color: #2F5376; font-weight: bold;}
 
 /* label */
 
@@ -185,7 +185,7 @@ div.rmmenuicon a {
 }
 div.rmmenuicon img { margin-top: 8px; margin-bottom: 8px; }
 div.rmmenuicon a span {
-    font-size: 11px;
+    font-size: 68.75%;
     font-weight: bold;
     display: block;
 }
@@ -199,7 +199,7 @@ div.rmmenuicon a:hover span{
 }
 
 div.CPbigTitle{
-    font-size: 12px;
+    font-size: 75%;
     color: #606060;
     background: no-repeat left top;
     font-weight: bold;
